Attempt to fix the button alignments
Edited to close a <div> on Niall's designer card in quiz results section.

--- a/_patterns/quiz/quiz.css
+++ b/_patterns/quiz/quiz.css
@@ -40,7 +40,7 @@ html {
   margin-right: auto;
 }
 
-.results-title, .card-content, .results-btn {
+.results-title, .card-content {
   text-align: center;
   max-width: 600px;
   margin-left: auto;
